--- a/api-reference/endpoint/meta/create_campaign.mdx
+++ b/api-reference/endpoint/meta/create_campaign.mdx
@@ -64,6 +64,13 @@ playground: "none"
 	UTM tracking parameters template, expected variables that can be used in it: `{{campaign.id}},{{adset.id}},{{ad.id}},{{campaign.name}},{{adset.name}},{{ad.name}}`
 </ParamField>
 
+<Card
+	title="📺 Campaign Type Based Parameters"
+	href="/api-reference/endpoint/goals/overview"
+>
+	This page has all the parameters for campaign type based parameters.
+</Card>
+
 ## Response
 
 <ResponseField name="success" type="boolean">
