update conversions goal documentation to reference new custom conversions API

--- a/api-reference/endpoint/goals/conversionsGoal.mdx
+++ b/api-reference/endpoint/goals/conversionsGoal.mdx
@@ -54,9 +54,9 @@ description: "This page is used to create a conversions goal campaign."
 </ParamField>
 
 <ParamField body="conversionGoal" type="string" required>
-	Campaign conversion goal type, values: `SEARCH`, `CONTACT`, `FIND_LOCATION`,
-	`SCHEDULE`, `START_TRIAL`, `SUBMIT_APPLICATION`, `SUBSCRIBE`, `LEAD`,
-	`COMPLETE_REGISTRATION`
+	Campaign conversion goal type, get the list of conversion goals from
+	[here](/api-reference/endpoint/meta/get_custom_conversions), use
+	`CONVERSIONS` in campaignType to get the list of conversion goals.
 </ParamField>
 
 <ParamField body="campaignType" type="string" required>
@@ -154,9 +154,9 @@ description: "This page is used to create a conversions goal campaign."
 </ParamField>
 
 <ParamField body="conversionGoal" type="string" required>
-	Campaign conversion goal type, values: `SEARCH`, `CONTACT`, `FIND_LOCATION`,
-	`SCHEDULE`, `START_TRIAL`, `SUBMIT_APPLICATION`, `SUBSCRIBE`, `LEAD`,
-	`COMPLETE_REGISTRATION`
+	Campaign conversion goal type, get the list of conversion goals from
+	[here](/api-reference/endpoint/meta/get_custom_conversions), use
+	`CONVERSIONS` in campaignType to get the list of conversion goals.
 </ParamField>
 
 <ParamField body="campaignType" type="string" required>
