--- a/api-reference/endpoint/goals/salesGoal.mdx
+++ b/api-reference/endpoint/goals/salesGoal.mdx
@@ -54,9 +54,9 @@ description: "This page is used to create a sales goal campaign."
 </ParamField>
 
 <ParamField body="conversionGoal" type="string" required>
-	Campaign conversion goal type, values: `SEARCH`, `DONATE`, `START_TRIAL`,
-	`SUBSCRIBE`, `ADD_TO_CART`, `INITIATED_CHECKOUT`, `ADD_PAYMENT_INFO`,
-	`PURCHASE`, `COMPLETE_REGISTRATION`, `CONTENT_VIEW`
+	Campaign conversion goal type, get the list of conversion goals from
+	[here](/api-reference/endpoint/meta/get_custom_conversions), use
+	`OUTCOME_SALES` in campaignType to get the list of conversion goals.
 </ParamField>
 
 <ParamField body="campaignType" type="string" required>
@@ -154,9 +154,9 @@ description: "This page is used to create a sales goal campaign."
 </ParamField>
 
 <ParamField body="conversionGoal" type="string" required>
-	Campaign conversion goal type, values: `SEARCH`, `DONATE`, `START_TRIAL`,
-	`SUBSCRIBE`, `ADD_TO_CART`, `INITIATED_CHECKOUT`, `ADD_PAYMENT_INFO`,
-	`PURCHASE`, `COMPLETE_REGISTRATION`, `CONTENT_VIEW`
+	Campaign conversion goal type, get the list of conversion goals from
+	[here](/api-reference/endpoint/meta/get_custom_conversions), use
+	`OUTCOME_SALES` in campaignType to get the list of conversion goals.
 </ParamField>
 
 <ParamField body="campaignType" type="string" required>
