--- a/api-reference/endpoint/meta/get_custom_conversions.mdx
+++ b/api-reference/endpoint/meta/get_custom_conversions.mdx
@@ -12,10 +12,10 @@ description: "Get custom conversions for a campaign"
 	retrieve the user ID from [get profile
 	page](/api-reference/endpoint/auth/get_profile).
 </ParamField>
-<ParamField body="pixelId" type="string">
+<ParamField body="pixelId" type="string" required>
 	Facebook Pixel ID
 </ParamField>
-<ParamField body="campaignType" type="string">
+<ParamField body="campaignType" type="string" required>
 	Campaign Type, Supported values are: `CONVERSIONS`, `OUTCOME_SALES`
 </ParamField>
 
