--- a/api-reference/endpoint/meta/create_campaign.mdx
+++ b/api-reference/endpoint/meta/create_campaign.mdx
@@ -19,8 +19,12 @@ playground: "none"
 	Destination URL for the ad campaign
 </ParamField>
 
+<ParamField body="currency" type="number" required>
+	Currency Code (`USD`, `EUR`, etc.)
+</ParamField>
+
 <ParamField body="budget" type="number" required>
-	Campaign budget amount in currency units
+	Campaign budget amount.
 </ParamField>
 
 <ParamField body="campaignName" type="string" required>
