--- a/api-reference/endpoint/meta/create_campaign.mdx
+++ b/api-reference/endpoint/meta/create_campaign.mdx
@@ -1,112 +1,81 @@
----
-title: "Create Campaign"
-api: "POST /meta/create_campaign"
-description: "This endpoint is used to create a campaign."
-playground: "none"
----
+<Card title="🚗 Traffic Campaign">
+	Traffic campaigns are designed to drive users to a specific destination like a website, app, or messaging platform.
 
-## Request Body
+    <CardGroup cols={2}>
+    	<Card title="Dynamic Ad Campaign" href="/api-reference/endpoint/meta/campaign/traffic_dynamic" />
+    	<Card title="Standard Ad Campaign" href="/api-reference/endpoint/meta/campaign/traffic_standard"/>
+    </CardGroup>
 
-<ParamField body="campaignType" type="string" required>
-	Type of campaign = `LINK_CLICKS`, `LEAD_GENERATION`, `CONVERSIONS`,
-	`LEADS_MESSAGE`, `OUTCOME_SALES`, `OUTCOME_ENGAGEMENT`, `POST_ENGAGEMENT`,
-	`OUTCOME_AWARENESS`, `CATALOG`
-</ParamField>
-
-{/* Get Campaign Goal Parameters */}
-
-<ParamField body="url" type="string" required>
-	Destination URL for the ad campaign
-</ParamField>
-
-<ParamField body="currency" type="number" required>
-	Currency Code (`USD`, `EUR`, etc.)
-</ParamField>
-
-<ParamField body="budget" type="number" required>
-	Campaign budget amount.
-</ParamField>
-
-<ParamField body="campaignName" type="string" required>
-	Descriptive name for the campaign
-</ParamField>
-
-<ParamField body="audienceName" type="string" required>
-	Name of the target audience
-</ParamField>
-
-<ParamField body="callToAction" type="string" required>
-	If Campaign Type is Traffic, supported call to action types are
-	`LEARN_MORE`, `SHOP_NOW`, `SIGN_UP`, `DOWNLOAD`, `WATCH_MORE`, `APPLY_NOW`,
-	`SUBSCRIBE`, `GET_QUOTE`, `CONTACT_US`, `ORDER_NOW`, `REQUEST_TIME`,
-	`GET_SHOWTIMES`, `LISTEN_NOW`, `SEE_MENU`, `BOOK_TRAVEL`
-
-    If Campaign Type is `LEAD_GENERATION`, supported call to action types are
-    `APPLY_NOW`, `DOWNLOAD`, `GET_QUOTE`, `LEARN_MORE`, `SIGN_UP`, `SUBSCRIBE`,
-    `BOOK_TRAVEL`
-
-</ParamField>
-
-<ParamField body="startDate" type="string">
-	Start Date Format: `YYYY-MM-DD`
-</ParamField>
-
-<ParamField body="endDate" type="string">
-	End Date Format: `YYYY-MM-DD`
-</ParamField>
-
-<ParamField body="specialAdCategories" type="string[]">
-	Special ad categories = `HOUSING`, `FINANCIAL_PRODUCTS_SERVICES`,
-	`EMPLOYMENT`
-</ParamField>
-
-<ParamField body="specialAdCountries" type="string[]">
-	ISO 3166-1 alpha-2 country codes e.g: `US`,`UK`
-</ParamField>
-
-<ParamField body="utmParams" type="string">
-	UTM tracking parameters template, expected variables that can be used in it: `{{campaign.id}},{{adset.id}},{{ad.id}},{{campaign.name}},{{adset.name}},{{ad.name}}`
-</ParamField>
-
-<Card
-	title="📺 Campaign Type Based Parameters"
-	href="/api-reference/endpoint/goals/overview"
->
-	This page has all the parameters for campaign type based parameters.
 </Card>
 
-## Response
+<Card title="📝 Leads Campaign" >
+	Lead generation campaigns are ad campaigns designed to collect contact
+	information (like name, email, phone number) directly from users on Meta
+	platforms without needing them to leave the app.
 
-<ResponseField name="success" type="boolean">
-	Indicates that the HTTP response was successful (status code 200 OK).
-</ResponseField>
+    <CardGroup cols={2}>
+    	<Card title="Dynamic Ad Campaign" href="/api-reference/endpoint/meta/campaign/leads_dynamic" />
+    	<Card title="Standard Ad Campaign" href="/api-reference/endpoint/meta/campaign/leads_standard"/>
+    </CardGroup>
 
-<ResponseField name="results" type="object">
-	<Expandable title="Results Object">
-		<ResponseField name="success" type="boolean">
-			Indicates whether the specific operation or API action was
-			successful.
-		</ResponseField>
-		<ResponseField name="campaign" type="object">
-			<Expandable title="Campaign Object">
-				<ResponseField name="leadFormId" type="string">
-					The unique identifier for the lead form associated with this
-					campaign.
-				</ResponseField>
-				<ResponseField name="campaignId" type="string">
-					The unique identifier for the campaign.
-				</ResponseField>
-				<ResponseField name="adId" type="string[]">
-					Ad IDs Array
-				</ResponseField>
-				<ResponseField name="adGroupId" type="string">
-					The unique identifier for the ad group associated with this
-					campaign.
-				</ResponseField>
-			</Expandable>
-		</ResponseField>
-		<ResponseField name="error" type="string">
-			Error string if something went wrong
-		</ResponseField>
-	</Expandable>
-</ResponseField>
+</Card>
+
+<Card
+	title="🔄 Conversion Campaign"
+>
+	Conversion campaigns are designed to drive users to take specific actions, such as completing a purchase, downloading an app, or signing up for a service.
+
+    <CardGroup cols={2}>
+    	<Card title="Dynamic Ad Campaign" href="/api-reference/endpoint/meta/campaign/conversion_dynamic" />
+    	<Card title="Standard Ad Campaign" href="/api-reference/endpoint/meta/campaign/conversion_standard"/>
+    </CardGroup>
+
+</Card>
+
+<Card title="💰 Sales Campaign" >
+	Sales campaigns are designed to drive purchases or conversions, showing your ads to people most likely to buy your product or service.
+
+    <CardGroup cols={2}>
+    	<Card title="Dynamic Ad Campaign" href="/api-reference/endpoint/meta/campaign/sales_dynamic" />
+    	<Card title="Standard Ad Campaign" href="/api-reference/endpoint/meta/campaign/sales_standard"/>
+    </CardGroup>
+
+</Card>
+
+<Card
+	title="📢 Awareness Campaign"
+>
+	Awareness campaigns are designed to increase recognition of your brand, product, or service by showing your ads to people most likely to remember them.
+
+    <CardGroup cols={2}>
+    	<Card title="Dynamic Ad Campaign" href="/api-reference/endpoint/meta/campaign/awareness_dynamic" />
+    	<Card title="Standard Ad Campaign" href="/api-reference/endpoint/meta/campaign/awareness_standard"/>
+    </CardGroup>
+
+</Card>
+
+<Card
+	title="📞 Phone Calls Campaign"
+	href="/api-reference/endpoint/meta/campaign/phone_call"
+>
+	Phone call campaigns are designed to encourage users to tap and call your
+	business directly from the ad, making it easy to generate phone inquiries or
+	leads.
+</Card>
+
+<Card
+	title="💬 Engagement Campaign"
+	href="/api-reference/endpoint/meta/campaign/engagement"
+>
+	Engagement campaigns are designed to get more interactions on your content,
+	such as likes, comments, shares, event responses, or post saves on Meta
+	platforms.
+</Card>
+
+<Card
+	title="📈 Boost Post Campaign"
+	href="/api-reference/endpoint/meta/campaign/boost_post"
+>
+	Boost post campaigns are used to promote an existing post on your Facebook or Instagram page to reach a larger audience and increase engagement like likes, comments, shares, or views.
+
+</Card>
